@@ -107,6 +107,8 @@ public:
 
     virtual bool isConnected() const=0;
     virtual void rescan(bool full=true)=0;
+    virtual void connectionStateChanged() { }
+    virtual void toggle() { }
     virtual bool isRefreshing() const=0;
     bool isIdle() const { return isConnected() && !isRefreshing(); }
     virtual void configure(QWidget *) { }
