@@ -465,16 +465,6 @@ void RemoteFsDevice::setAudioFolder() const
     audioFolder=Utils::fixPath(mountPoint(details, true));
 }
 
-void RemoteFsDevice::clear() const
-{
-    if (childCount()) {
-        RemoteFsDevice *that=(RemoteFsDevice *)this;
-        that->update=new MusicLibraryItemRoot();
-        that->applyUpdate();
-        that->scanned=false;
-    }
-}
-
 void RemoteFsDevice::configure(QWidget *parent)
 {
     if (isRefreshing()) {
